ves-parser/tests/t26_unclosed_string_interpolation_1.test
// unclosed quote
f"test {1+1};

%output err

error: This interpolated string is missing a closing quote
  ┌─ <source: #9acc5010c9592cd6>:2:1
  │
2 │ f"test {1+1};
  │ ^^^^^^^^^^^^^